[gd_scene load_steps=35 format=2]

[ext_resource path="res://Team_Level/Background-of-kariemondoness.png" type="Texture" id=1]
[ext_resource path="res://Team_Level/Team_Level.gd" type="Script" id=2]
[ext_resource path="res://Team_Level/devHall.png" type="Texture" id=3]
[ext_resource path="res://Team_Level/TimTarget.gd" type="Script" id=4]
[ext_resource path="res://Team_Level/Tim.png" type="Texture" id=5]
[ext_resource path="res://Team_Level/NaomiTarget.gd" type="Script" id=6]
[ext_resource path="res://Team_Level/Naomi.png" type="Texture" id=7]
[ext_resource path="res://Team_Level/MichaelTarget.gd" type="Script" id=8]
[ext_resource path="res://Team_Level/Michael.png" type="Texture" id=9]
[ext_resource path="res://Team_Level/LarayTarget.gd" type="Script" id=10]
[ext_resource path="res://Team_Level/Laray.png" type="Texture" id=11]
[ext_resource path="res://Team_Level/WesTarget.gd" type="Script" id=12]
[ext_resource path="res://Team_Level/ummWes.png" type="Texture" id=13]
[ext_resource path="res://Team_Level/JevionTarget.gd" type="Script" id=14]
[ext_resource path="res://Team_Level/Jevion.png" type="Texture" id=15]
[ext_resource path="res://Cactus Regular.otf" type="DynamicFontData" id=16]
[ext_resource path="res://images/GameOverGirl.png" type="Texture" id=17]
[ext_resource path="res://GameOverGirl.gd" type="Script" id=18]
[ext_resource path="res://Retry_Trigger.gd" type="Script" id=19]
[ext_resource path="res://Fonts/Cactus Reguar DFont.tres" type="DynamicFont" id=20]
[ext_resource path="res://Fonts/Cactus Regular.tres" type="DynamicFontData" id=21]
[ext_resource path="res://SuccessLabel.gd" type="Script" id=22]
[ext_resource path="res://Next_Trigger.gd" type="Script" id=23]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 65.0012, 11.0721 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 38.0011, 161 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 73.0013, 187 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 66.0012, 195 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 62.0012, 194 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 10, 219 )

[sub_resource type="DynamicFont" id=7]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 16 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 16.1798, 10 )

[sub_resource type="DynamicFont" id=9]

size = 112
use_mipmaps = false
use_filter = false
font_data = ExtResource( 21 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=10]

size = 112
use_mipmaps = false
use_filter = false
font_data = ExtResource( 21 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=11]

custom_solver_bias = 0.0
extents = Vector2( 16.1798, 10 )

[node name="Team_Level" type="Sprite" index="0"]

texture = ExtResource( 1 )
centered = false
script = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="devHall" type="Sprite" parent="." index="0"]

position = Vector2( 513.002, 305.001 )
texture = ExtResource( 3 )

[node name="TimTarget" type="Area2D" parent="." index="1"]

position = Vector2( 114, 395.001 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Tim" type="Sprite" parent="TimTarget" index="0"]

position = Vector2( 15.0011, 18.0002 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TimTarget" index="1"]

position = Vector2( 4.00006, -31.4998 )
scale = Vector2( 1, 19.1923 )
shape = SubResource( 1 )

[node name="NaomiTarget" type="Area2D" parent="." index="2"]

position = Vector2( 261, 424.001 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 6 )

[node name="Naomi" type="Sprite" parent="NaomiTarget" index="0"]

position = Vector2( 2.00113, 36.0004 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NaomiTarget" index="1"]

position = Vector2( 5, -17 )
shape = SubResource( 2 )

[node name="MichaelTarget" type="Area2D" parent="." index="3"]

position = Vector2( 367, 440.001 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 8 )

[node name="Michael" type="Sprite" parent="MichaelTarget" index="0"]

position = Vector2( 20.0011, -31.9998 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MichaelTarget" index="1"]

position = Vector2( 20, -40.0001 )
shape = SubResource( 3 )

[node name="LarayTarget" type="Area2D" parent="." index="4"]

position = Vector2( 952.001, 428.001 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 10 )

[node name="Laray" type="Sprite" parent="LarayTarget" index="0"]

position = Vector2( 5.00119, -31.9998 )
scale = Vector2( 0.73, 0.73 )
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LarayTarget" index="1"]

position = Vector2( 0, -39.0001 )
shape = SubResource( 4 )

[node name="WesTarget" type="Area2D" parent="." index="5"]

position = Vector2( 511.001, 407.001 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 12 )

[node name="ummWes" type="Sprite" parent="WesTarget" index="0"]

position = Vector2( -3.99878, 10.0002 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 13 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WesTarget" index="1"]

position = Vector2( 20, -10.0001 )
shape = SubResource( 5 )

[node name="JevionTarget" type="Area2D" parent="." index="6"]

position = Vector2( 680.001, 399.001 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 14 )

[node name="Jevion" type="Sprite" parent="JevionTarget" index="0"]

position = Vector2( 7.00107, -0.999756 )
texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="JevionTarget" index="1"]

scale = Vector2( 7.19232, 1 )
shape = SubResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="LevelLabel" type="Label" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 8.0
margin_right = 453.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Level 10"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Rect", "Size Flags", "Theme", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="TidyText" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 300.0
margin_top = 538.0
margin_right = 733.0
margin_bottom = 596.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Does it spark stupidity?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Rect", "Size Flags", "Theme", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="GameOverGirl" type="Sprite" parent="." index="9"]

visible = false
texture = ExtResource( 17 )
centered = false
script = ExtResource( 18 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Retry_Trigger" type="Area2D" parent="GameOverGirl" index="0"]

position = Vector2( 490, 270 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 19 )

[node name="Retry Label" type="Label" parent="GameOverGirl/Retry_Trigger" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -50.0
margin_top = -30.0
margin_right = 79.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 20 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Retry?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOverGirl/Retry_Trigger" index="1"]

position = Vector2( 10, -10 )
scale = Vector2( 5.5625, 2.42308 )
shape = SubResource( 8 )

[node name="GameOverLabel" type="Label" parent="GameOverGirl" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 280.0
margin_top = 120.0
margin_right = 734.0
margin_bottom = 222.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Game Over!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="SuccessLabel" type="Label" parent="." index="10"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 210.0
margin_top = 180.0
margin_right = 784.0
margin_bottom = 282.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Feel the Joy!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 22 )
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Next_Trigger" type="Area2D" parent="SuccessLabel" index="0"]

position = Vector2( 280, 140 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 23 )

[node name="Next Label" type="Label" parent="SuccessLabel/Next_Trigger" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -70.0
margin_top = -30.0
margin_right = 98.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 20 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Continue!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SuccessLabel/Next_Trigger" index="1"]

position = Vector2( 10, -10 )
scale = Vector2( 5.5625, 2.42308 )
shape = SubResource( 11 )


